<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddModAssessmentActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAssessmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:onClick="tvAssessmentDateIsClicked"
                android:text="@string/tvSelect"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/llStatusGroup" />

            <LinearLayout
                android:id="@+id/llCourseGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName">

                <TextView
                    android:id="@+id/tbCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/tvCourse" />

                <Spinner
                    android:id="@+id/spnnrCourse"
                    android:layout_width="200dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/etTerm"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@string/etTerm"
                    android:textSize="14sp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabNewCourse"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="fabNewCourseIsClicked"
                    app:fabCustomSize="24dp"
                    app:layout_constraintStart_toEndOf="@+id/tvEmail"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTypeGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llRange">

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvType" />

                <Spinner
                    android:id="@+id/spnnrType"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/etTerm"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@string/etTerm"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStatusGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llTypeGroup">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etStatus" />

                <Spinner
                    android:id="@+id/spnnrStatus"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="30dp"
                    android:hint="@string/etTerm"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@string/etTerm"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNoteGroup"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAssessmentDate">

                <TextView
                    android:id="@+id/tvNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvNote" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        tools:ignore="LabelFor" />
                </androidx.core.widget.NestedScrollView>


            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgroupRadioContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llNoteGroup">

                <TextView
                    android:id="@+id/tvDisplayNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDisplayNotification" />

                <RadioButton
                    android:id="@+id/rbTrue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/rbFalse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/no" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:onClick="btnSubmitIsClicked"
                android:text="@string/btnSubmit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgroupRadioContainer" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:onClick="btnCancelIsClicked"
                android:text="@string/btnCancel"
                app:layout_constraintStart_toEndOf="@+id/btnSubmit"
                app:layout_constraintTop_toBottomOf="@+id/rgroupRadioContainer" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:onClick="btnDeleteIsClicked"
                android:text="@string/btnDelete"
                app:layout_constraintStart_toEndOf="@+id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/rgroupRadioContainer" />

            <ImageButton
                android:id="@+id/ibtnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:contentDescription="@string/share"
                android:focusable="true"
                android:onClick="ibtnShareIsClicked"
                app:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintStart_toEndOf="@+id/btnDelete"
                app:layout_constraintTop_toBottomOf="@+id/rgroupRadioContainer"
                app:srcCompat="@drawable/ic_mail_outline_black_24dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="23dp"
                android:text="@string/tvSelect"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llStatusGroup" />

            <LinearLayout
                android:id="@+id/llRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="115dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvRangeStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvStartDate" />

                <TextView
                    android:id="@+id/tvRangeTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/To" />

                <TextView
                    android:id="@+id/tvRangeEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="106dp"
                    tools:text="@string/tvEndDate" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>